--- a/app/src/main/res/layout/activity_buku_pr.xml
+++ b/app/src/main/res/layout/activity_buku_pr.xml
@@ -14,6 +14,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnCreateBukuPr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBukuPr"
         tools:listitem="@layout/item_bukupr"
