--- a/app/src/main/res/layout/activity_tugas.xml
+++ b/app/src/main/res/layout/activity_tugas.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".TugasActivity">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnCreateTugas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTugas"
+        tools:listitem="@layout/item_bukupr"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCreateTugas" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
