--- a/app/src/main/res/layout/activity_create_tugas.xml
+++ b/app/src/main/res/layout/activity_create_tugas.xml
@@ -145,7 +145,8 @@
                     style="@style/Widget.AppCompat.Spinner.Underlined"
                     android:backgroundTint="@color/grey_textview"
                     app:layout_constraintTop_toBottomOf="@id/tvStatus"
-                    app:layout_constraintStart_toStartOf="@id/tvStatus"/>
+                    app:layout_constraintStart_toStartOf="@id/tvStatus"
+                    android:theme="@style/yourStyleForSpinnerItem"/>
 
                 <TextView
                     android:id="@+id/tvSubject"
