--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:spinnerItemStyle">@style/yourStyleForSpinnerItem</item>
+    </style>
+
+    <style name="yourStyleForSpinnerItem" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/grey_textview</item>
+        <item name="android:textSize">20sp</item>
     </style>
 </resources>
