--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/varela"
-        android:text="Login to your account"
+        android:text="Sign in to your account"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -108,7 +108,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/style_rounded_blue_rectangle"
             android:fontFamily="@font/varela"
-            android:text="Log In"
+            android:text="Sign In"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
