--- a/app/src/main/res/layout/activity_tugas.xml
+++ b/app/src/main/res/layout/activity_tugas.xml
@@ -14,6 +14,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnBackToBukuPr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:layout_constraintStart_toEndOf="@id/btnCreateTugas"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTugas"
         tools:listitem="@layout/item_bukupr"
